--- a/src/styles/oneWordSuggestions.css
+++ b/src/styles/oneWordSuggestions.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  height:50px;
+  height:100px;
   width: 350px;
   background-color: aliceblue;
   overflow: hidden;
